add navbar content

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,1 +1,7 @@
-<img src="/images/logo.png" alt="" />
+<nav>
+  <img class="logo" src="/images/logo.png" alt="" />
+  <div class="navbar-right">
+    <div>Date placeholder</div>
+    <div>Operator</div>
+  </div>
+</nav>
