--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,6 +1,25 @@
 :host {
-  display: flex;
-  height: 80px;
-  padding: 1rem;
+  display: block;
   background-color: #dcdcdc;
+
+  nav {
+    display: flex;
+    gap: 2rem;
+    height: 80px;
+    padding: 1rem 2rem;
+    border-bottom: 5px solid #03aa9c;
+    align-items: center;
+
+    .logo {
+      flex: 0 0 auto;
+      height: 100%;
+    }
+
+    .navbar-right {
+      margin-left: auto;
+      display: flex;
+      justify-content: space-between;
+      flex: 0 1 300px;
+    }
+  }
 }
