--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,6 +2,9 @@
   <img class="logo" src="/images/logo.png" alt="" />
   <div class="navbar-right">
     <div>Date placeholder</div>
-    <div>Operator</div>
+    <div class="user">
+      <span class="material-icons">account_circle</span>
+      <span>Operator</span>
+    </div>
   </div>
 </nav>
