--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -8,3 +8,8 @@
     </div>
   </div>
 </nav>
+<ul *ngIf="machines$ | async as machines">
+  <li *ngFor="let m of machines">
+    <app-machine [state]="m.state" [type]="m.type" [compact]="true" />
+  </li>
+</ul>
