--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav>
   <img class="logo" src="/images/logo.png" alt="" />
   <div class="navbar-right">
-    <div>Date placeholder</div>
+    <div class="date-wrapper">
+      <div class="date">Date placeholder</div>
+    </div>
     <div class="user">
       <span class="material-icons">account_circle</span>
       <span>Operator</span>
