--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -10,7 +10,7 @@
     background-color: #00a000;
     position: absolute;
     width: 100%;
-    height: 6px;
+    height: 4px;
     top: 50%;
     transform: translateY(-50%);
   }
@@ -20,8 +20,14 @@
     justify-content: space-between;
     position: relative;
 
+    @media screen and (max-width: 575px) {
+      flex-direction: column;
+    }
+
     li {
-      flex: 0 1 150px;
+      @media screen and (min-width: 576px) {
+        flex: 0 1 150px;
+      }
     }
   }
 }
