--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -7,8 +7,10 @@
     gap: 2rem;
     height: 80px;
     padding: 1rem 2rem;
-    border-bottom: 5px solid #03aa9c;
+    border-bottom: 6px solid #03aa9c;
     align-items: center;
+    font-size: 1.15rem;
+    font-weight: 500;
 
     .logo {
       flex: 0 0 auto;
@@ -29,11 +31,23 @@
     }
   }
 
+  .date {
+    @media screen and (max-width: 575px) {
+      display: none;
+    }
+  }
+
   ul {
     display: flex;
 
     li {
-      flex: 0 1 200px;
+      @media screen and (min-width: 576px) {
+        flex: 0 1 200px;
+      }
+    }
+
+    @media screen and (max-width: 575px) {
+      flex-direction: column;
     }
   }
 }
