--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <img class="logo" src="/images/logo.png" alt="" />
   <div class="navbar-right">
     <div class="date-wrapper">
-      <div class="date">Date placeholder</div>
+      <app-clock class="date"/>
     </div>
     <div class="user">
       <span class="material-icons">account_circle</span>
